# backend_vercel

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  coverage.xml  index.py  init_db.py  project_objects.py  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties  vercel.json
.github/workflows/: build.yml  workflow.yml
api/: index.py
app/: __init__.py  session_provider.py
app/controller/: auth_controller.py  qanda_controller.py
app/models/: answer.py  course.py  post_qanda.py  question.py  user.py
app/routes/: auth.py  course.py  home.py  qanda.py  routes.py  search.py  user.py
app/utils/: auth_service.py
controllers/: AnswerPostController.py  CategoryController.py  CourseController.py  QuestionPostController.py  SectionController.py  UserController.py  VisitedCourseController.py  __init__.py  answer_post_controller.py  category_controller.py  question_post_controller.py  section_controller.py  user_controller.py
instance/: SkillSwapMUIC.db  database.db
migrations/versions/: b488c554ffc9_initial_migration.py
models/: AnswerPost.py  Category.py  Course.py  QuestionPost.py  User.py  __init__.py  course.py  question.py  section.py  user.py  visited_course.py
tests/: .coverage  coverage.xml  test_answer.py  test_controller_auth.py  test_course.py  test_post.py  test_route_gerrandomsixtitles.py  test_route_getthread.py  test_route_question.py  test_routes_auth.py  test_routes_qanda_rest.py  test_routes_search.py  test_search.py  test_user.py
