[tool.poetry]
name = "backend-vercel"
version = "0.1.0"
description = ""
authors = ["gameyp <yossatorn.pht@student.mahidol.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "3.0.0"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
flake8 = "^7.0.0"
black = "^24.2.0"
isort = "^5.13.2"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
